@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-11T08:19:32Z",
+  "timestamp" : "2023-07-11T16:20:08Z",
   "count_outdated" : 425,
   "uniques_outdated" : 264,
-  "count" : 438,
-  "uniques" : 273,
+  "count" : 442,
+  "uniques" : 275,
   "clones" : [
     {
       "timestamp": "2023-07-02T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 4,
       "uniques_minmax": [ 4, 4 ],
       "uniques_decinc": [ 0, 4 ]
+    },
+    {
+      "timestamp": "2023-07-11T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
