@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 9,
+  "count": 17,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2023-07-02T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 6,
       "uniques": 4
+    },
+    {
+      "timestamp": "2023-07-11T00:00:00Z",
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
